k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sudoku-app
  namespace: sudoku
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sudoku
  template:
    metadata:
      labels:
        app: sudoku
    spec:
      containers:
      - name: sudoku
        image: ghcr.io/pilgrimv/sudoku-web-test:latest
        ports:
        - containerPort: 5000
