k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sudoku-service
  namespace: sudoku
spec:
  selector:
    app: sudoku
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
